# wiseup

./: .gitignore  LICENSE  README.md  contributors.txt
design/enclosure-design/: qbox.stl
design/enclosure-design/Gateway Enclosure/Raspberrypi_B+/: Case Rasp Bplus - Top.STL  (+5 more)
design/enclosure-design/microcontroller-gateway/: BOX_UP 1.1.STL  BOX_UP Support 1.1.STL  Cover 3.1.STL  Support 1.1.STL
design/pcb-design/433TMP/: 433TMP.b#2  433TMP.b#3  433TMP.b#4  433TMP.b#5  433TMP.b#7  433TMP.b#8  433TMP.b#9  433TMP.s#2  433TMP.s#3  433TMP.s#4  433TMP.s#5  433TMP.s#6  433TMP.s#7  433TMP.s#8  eagle.epf
design/pcb-design/5v-switch-sensor/: 5v-switch-sensor.brd  5v-switch-sensor.pro  5v-switch-sensor.sch
design/pcb-design/ArdSensor2/: ArdSensor.b#1  ArdSensor.b#2  ArdSensor.b#3  ArdSensor.b#4  ArdSensor.b#5  ArdSensor.b#6  ArdSensor.b#7  ArdSensor.b#8  ArdSensor.b#9  ArdSensor.dri  ArdSensor.gpi  ArdSensor.s#1  ArdSensor.s#2  ArdSensor.s#3  ArdSensor.s#4  ArdSensor.s#5  ArdSensor.s#6  ArdSensor.s#7  ArdSensor.s#8  ArdSensor.s#9  eagle.epf
design/pcb-design/AtmelSMDNRF/: AtmelSMD328NRF.b#2  AtmelSMD328NRF.b#3  AtmelSMD328NRF.b#4  AtmelSMD328NRF.b#5  AtmelSMD328NRF.b#6  AtmelSMD328NRF.b#7  AtmelSMD328NRF.b#8  AtmelSMD328NRF.b#9  AtmelSMD328NRF.dri  AtmelSMD328NRF.gpi  AtmelSMD328NRF.s#1  AtmelSMD328NRF.s#2  AtmelSMD328NRF.s#3  AtmelSMD328NRF.s#4  AtmelSMD328NRF.s#5  AtmelSMD328NRF.s#6  AtmelSMD328NRF.s#7  AtmelSMD328NRF.s#8  AtmelSMD328NRF.s#9  AtmelSMD328NRF.sch  AtmelSMD328NRF_00.job  AtmelSMD328NRF_00.pro  AtmelSMD328NRF_01.job  AtmelSMD328NRF_01.pro  AtmelSMD328NRF_02.job  AtmelSMD328NRF_02.pro  AtmelSMD328NRF_03.job  AtmelSMD328NRF_03.pro  AtmelSMD328NRF_04.job  AtmelSMD328NRF_04.pro  eagle.epf
docs/: Sensor Hub v01.pptx  WiseUp.docx  WiseUp.xlsx  Wiseup.vsdx  cmake-linux-dev.txt  communication-diagram.pptx  linux-deamons.pptx  linux-development-junk.txt  nrf-battery-sensor.pptx  pcb_and_enclosure_design.pptx
src/: wiseup-dev.sql  wiseup.sql
src/cordova/www/: index.html
src/linux/: CMakeLists.txt
src/linux/cmake/modules/: FindMySQL.cmake
src/linux/include/: common.h  commonMethods.hpp  database.hpp  filelog.h  gfx.h  nrf24l01.h  nrfTaskMng.h  pcd8544.h  screen.h  wiseApplication.h  wiseCacheDB.h  wiseDBMng.h  wiseEventMng.h  wiseNrfAckQueue.h  wise_client_handler.h  wise_ipc.h  wise_mysql.h  wise_rfcomm.hpp
src/linux/src/: CMakeLists.txt  filelog.cxx  lcd_test.cxx  nrfTaskMng.cxx  screen.cxx  wise-dbd.cxx  wise-eventd.cxx  wise-nrfd.cxx  wise-stdout-pipe.cxx  wise-timer.h  wiseApplication.cxx  wiseCacheDB.cxx  wiseDBMng.cxx  wiseEventMng.cxx  wiseNrfAckQueue.cxx  wise_client_handler.cxx  wise_ipc.cxx  wise_mysql.cxx
src/linux/src/arch/spi/: spi.c
src/linux/src/modules/: CMakeLists.txt
src/linux/src/modules/nokia_5110_lcd/: pcd8544.cxx
src/linux/src/modules/nrf24l01/: nrf24l01.cxx
src/linux/test/: CMakeLists.txt  ble_broadcast.cxx  client-unix-domain.c  gpio-test.c  mysql-test.cxx  nrf_net_send.cxx  nrf_receiver.cxx  nrf_transmitter.cxx  server-unix-domain.c
src/mock/: mock.js  package.json
src/node-backend/: config.json  main.js  mock.json  mongo_adapter.js  package.json  pi.json  redis_adapter.js  sqlite_adapter.js  wise-redis.js  wise-sqlite.js
(+123 files in other folders)
